--- a/css/wsmore.css
+++ b/css/wsmore.css
@@ -74,7 +74,7 @@ iframe {
     background-image: linear-gradient(-125deg,rgba(81, 45, 109, 0.8) 50%, rgba(42, 147, 222, 0.5));
     opacity: 1; }
   .testo .contenuto {
-    text-align: left;
+    text-align: center;
     width: 80%;
     margin: 0 auto;
     padding:100px 0;	}
